--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.5.2
 bcrypt==4.0.1
 certifi==2025.6.15
 cffi==1.17.1
+click==8.1.8
 cryptography==45.0.4
 ecdsa==0.19.1
 exceptiongroup==1.3.0
@@ -12,6 +13,7 @@ fastapi==0.115.12
 greenlet==3.1.1
 h11==0.16.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 importlib-metadata==8.5.0
@@ -30,8 +32,10 @@ pydantic==2.10.6
 pydantic-core==2.27.2
 pytest==8.3.5
 pytest-asyncio==0.24.0
+python-dotenv==1.0.1
 python-jose==3.4.0
 python-multipart==0.0.20
+PyYAML==6.0.2
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -39,4 +43,8 @@ sqlalchemy==2.0.41
 starlette==0.44.0
 tomli==2.2.1
 typing-extensions==4.13.2
+uvicorn==0.33.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==13.1
 zipp==3.20.2
